<resources>

    <!-- Strings used for title and menu -->
    <string name="app_name">Composed By Experience</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="heading_label">Composed by Experience</string>

    <string name="textFirstPage">Press START to begin</string>
    <string name="textSecondPage">Menu</string>
    <string name="textCreateNew">Create new Experience</string>
    <string name="textTimeline">Timeline</string>

    <!-- Button Texts -->
    <string name="buttonStart">Start</string>
    <string name="buttonBack">Back</string>

    <string name="buttonRecord">Record</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonFinish">Finish</string>

    <string name="buttonCreateNew">Create New</string>
    <string name="buttonGallery">My Experiences</string>
    <string name="buttonHelp">Help</string>
    <string name="buttonContinue">Continue</string>

    <string name="buttonKeywordInput">Input Keyword</string>
    <string name="buttonMelodyInput">Input Melody</string>
    <string name="buttonRhythmInput">Input Rhythm</string>
    <string name="buttonMicInput">Capture Sound</string>
    <string name="buttonCamInput">Capture Picture</string>
    <string name="buttonActionInput">Capture Action</string>
    <string name="buttonNext">Next</string>

    <!-- CaptureAction -->
    <string name="titleOfFragmentCaptureAction">Track your Activities !</string>
    <string name="button_Switch_OFF">OFF</string>
    <string name="button_Switch_ON">ON</string>

    <!-- CapturePicture -->
    <string name="buttonTakePicture">Press Capture to take a Photos!</string>
    <string name="titleOfFragmentCapturePicture">Capture \n Your Pictures</string>


    <!-- Buttons Texts used for fragment inputKeyword-->
    <string name="buttonHappy">Happy</string>
    <string name="textInputKeyword">Select Keywords</string>
    <string name="buttonFeelings">Feelings</string>
    <string name="buttonEnvironment">Environment</string>
    <string name="buttonApartment">Apartment</string>
    <string name="buttonCity">City</string>
    <string name="buttonForest">Forest</string>
    <string name="buttonMountains">Mountains</string>
    <string name="buttonSea">Sea</string>
    <string name="buttonWindy">windy</string>
    <string name="buttonBright">Bright</string>
    <string name="buttonDark">Dark</string>
    <string name="buttonTidy">Tidy</string>
    <string name="buttonChaotic">Chaotic</string>
    <string name="buttonQuiet">Quiet</string>
    <string name="buttonLoud">Loud</string>
    <string name="buttonColorful">Colorful</string>
    <string name="buttonGrey">Grey</string>
    <string name="buttonSad">Sad</string>
    <string name="buttonTired">Tired</string>
    <string name="buttonExcited">Excited</string>
    <string name="buttonCalm">Calm</string>
    <string name="buttonCrazy">Crazy</string>
    <string name="buttonWarm">Warm</string>
    <string name="buttonCold">Cold</string>
    <string name="buttonStrong">Strong</string>
    <string name="buttonWeak">Weak</string>
    <string name="buttonAngry">Angry</string>
    <string name="buttonLoving">Loving</string>
    <string name="buttonInsecure">Insecure</string>
    <string name="buttonConfident">Confident</string>
    <string name="buttonSunny">Sunny</string>
    <string name="buttonRainy">Rainy</string>

    <!-- Labels -->
    <string name="textSoundCapture">Press START to record audio!</string>
    <string name="textSelectSoundCaptureType">Select which type of audio you will record:</string>
    <string name="Environment">Environment Sounds</string>
    <string name="Music">(Music) Sing a Song</string>
    <string name="inputMelody_label">Play a Melody</string>
    <string name="captureSound_label">Record Sounds</string>
    <string name="inputKeyword_label">Choose your Keywords</string>
    <string name="capturePicture_label">Capture some Picture</string>
    <string name="captureAction_label">Record your Activities</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textPictureCapture">Press Capture to take a Photos!</string>
    <string name="buttonCapture">Capture</string>
    <string name="textBPM">BPM:</string>


    <!-- Activities in Capture Activity -->
    <string name="activityRecordStringStill">Record: You stand still</string>
    <string name="activityRecordStringWalking">Record: You are walking</string>
    <string name="activityRecordStringVehicle">Record: You driving in a vehicle</string>
    <string name="activityRecordStringBicycle">Record: You driving a bicycle</string>
    <string name="activityRecordStringRunning">Record: You are Running</string>

    <!-- Activities in Capture Activity -->
    <string name="activityRecognitionStill">Still</string>
    <string name="activityRecognitionWalking">Walking</string>
    <string name="activityRecognitionVehicle">In Vehicle</string>
    <string name="activityRecognitionBicycle">Driving a bicycle</string>
    <string name="activityRecognitionRunning">Running</string>


    <!-- Activity Recording Messages -->
    <string name="activityRecognitionTrackingON">Record is on</string>
    <string name="somethingWentWrong">Something went Wrong, sorry.</string>
    <string name="activityRecognitionTrackingOFF">Record is off</string>

    <!-- Generic Rational Permission Dialog -->
    <string name="rational_required_permission">
        To use the function of this part of the app we need your permission for certain rights.
        To be able to use it press allow.</string>

    <!-- Toast Second Time Denied -->
    <string name="required_permission_denied_second_time">
        Sorry, you have not granted the permissions for this feature.
        However, you can still change this in your settings.
    </string>

    <!-- Reset Old Project Dialog -->
    <string name="dialog_delete_old_project_msg">
        "Do you really want to start a new composition?"
        "The old one will then be lost"
    </string>


    <!-- TimeLine -->
    <string name="timelineStart">Project started:</string>

    <!-- TimeLine TimeUnits -->
    <string name="timelineYears">Year/s ago</string>
    <string name="timelineMonths">Month/s ago</string>
    <string name="timelineDays">Day/s ago</string>
    <string name="timelineHours">Hour/s ago</string>
    <string name="timelineMinutes">Minute/s ago</string>
    <string name="timelineRecently">a short while ago</string>

    <string name="dialog_delete_old_project_title">Delete Old Project?</string>
    <string name="timelineProject">Actual Project</string>
    <string name="timelineStored">Stored Items</string>
    <string name="buttonSave">Save</string>

    <!-- Dependency Settings -->
    <string name="depCapturePicture">Visual Experience</string>
    <string name="depCaptureSound">Recorded Voice</string>
    <string name="depInputKeyword">Keywords</string>
    <string name="deCreateRhythm">Create Rhythm</string>
    <string name="depInputMelody">Melody Input</string>
    <string name="depCaptureAction">Recorded Activities</string>
    <string name="depCreateRhythm">Rhythm Input</string>
    <string name="depAI">AI Influence</string>
    <string name="depUser">User Input</string>


    <string name="depAiInfluence">AI Influence</string>
    <string name="depUserInput">Your Input</string>

    <string name="depHeaderRhythmArtifacts">Influence of Rhythm Artifacts</string>
    <string name="depHeaderMelodyArtifacts">Influence of Melody Artifacts</string>

    <string name="checkBoxOptionVisualArtifacts">Only use visual Artifacts for Videos</string>

</resources>