<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A7E74"
    tools:context="com.example.cobex.CreateNew">

    <TextView
        android:id="@+id/textview_first3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/textCreateNew"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2B2929"
        android:text="@string/buttonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBackCreate"
        app:strokeColor="#0B0A0A" />

    <Button
        android:id="@+id/buttonBackCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#2B2929"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#0B0A0A" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="305dp"
        android:layout_height="144dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_first3">


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonKeywordInput" />

        <Button
            android:id="@+id/buttonInputMelody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMelodyInput" />

        <Button
            android:id="@+id/buttonInputRhythm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonRhythmInput" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="305dp"
        android:layout_height="144dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonInputMic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMicInput"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="573dp" />

        <Button
            android:id="@+id/buttonInputCam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCamInput" />

        <Button
            android:id="@+id/buttonInputActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonActionInput" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="-14dp" />


</androidx.constraintlayout.widget.ConstraintLayout>