<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Home">

    <fragment
        android:id="@+id/Home"
        android:name="com.example.cobex.FirstFragment"
        android:label="@string/heading_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.cobex.SecondFragment"
        android:label="@string/heading_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/Home" />
        <action
            android:id="@+id/action_SecondFragment_to_CreateNew"
            app:destination="@id/CreateNew" />
    </fragment>

    <fragment
        android:id="@+id/CreateNew"
        android:name="com.example.cobex.CreateNew"
        android:label="@string/heading_label"
        tools:layout="@layout/fragment_create_new">

        <action
            android:id="@+id/action_CreateNew_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_CreateNew_to_captureSound"
            app:destination="@id/captureSound" />
        <action
            android:id="@+id/action_CreateNew_to_inputMelody"
            app:destination="@id/inputMelody" />
        <action
            android:id="@+id/action_CreateNew_to_inputKeyword"
            app:destination="@+id/inputKeyword" />

    </fragment>
    <fragment
        android:id="@+id/captureSound"
        android:name="com.example.cobex.CaptureSound"
        android:label="@string/captureSound_label"
        tools:layout="@layout/fragment_capture_sound" />
    <fragment
        android:id="@+id/inputMelody"
        android:name="com.example.cobex.InputMelody"
        android:label="@string/inputMelody_label"
        tools:layout="@layout/fragment_input_melody" />
    <fragment
        android:id="@+id/inputKeyword"
        android:name="com.example.cobex.InputKeyword"
        android:label="@string/inputKeyword_label"
        tools:layout="@layout/fragment_input_keyword" />

        <action
            android:id="@+id/action_inputKeyword_to_CreateNew"
            app:destination="@+id/CreateNew" />
        <action
            android:id="@+id/action_inputKeyword_to_inputMelody"
            app:destination="@+id/inputMelody"/>

</navigation>