<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A7E74"
    tools:context="com.example.cobex.CaptureSound">


    <TextView
        android:id="@+id/textview_soundCapture2"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-black"
        android:inputType="textMultiLine"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/textSelectSoundCaptureType"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_soundCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-black"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/textSoundCapture"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B2929"
        android:foregroundTint="#F6F4F4"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/buttonStart"
        app:iconTint="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        app:rippleColor="#6C6C6C" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="119dp"
        android:layout_marginBottom="64dp"
        android:foreground="@drawable/microphone_342"
        android:foregroundTint="#9F9E9E"
        android:src="@android:drawable/ic_btn_speak_now"
        app:layout_constraintBottom_toTopOf="@+id/textview_soundCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_soundCapture2"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="340dp"
        android:layout_height="133dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_soundCapture2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonEnvironment"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#FF6200EE"
            android:text="@string/Environment" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1159" />

        <Button
            android:id="@+id/buttonMusic"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="#FF6200EE"
            android:text="@string/Music" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="109dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />


</androidx.constraintlayout.widget.ConstraintLayout>