<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A7E74"
    tools:context="com.example.cobex.CapturePicture">


    <TextView
        android:id="@+id/textViewTakePhotos"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/titleOfFragmentCapturePicture"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/recyclerPictures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_soundCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/buttonTakePicture"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/buttonCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B2929"
        android:foregroundTint="#F6F4F4"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/buttonCapture"
        app:iconTint="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953"
        app:rippleColor="#6C6C6C" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPictures"
        android:layout_width="372dp"
        android:layout_height="355dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textview_soundCapture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="9"
        tools:listitem="@layout/recyclerview_picture_list_items" />

</androidx.constraintlayout.widget.ConstraintLayout>